Added Bit Array Test and fixed bugs

--- a/KPEngine_Test/KPEngine_Test.vcxproj
+++ b/KPEngine_Test/KPEngine_Test.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BitArray_UnitTest.cpp" />
     <ClCompile Include="FixedHeapManager_UnitTest.cpp" />
     <ClCompile Include="DynamicHeapManager_UnitTest.cpp" />
     <ClCompile Include="KPEngine_Test.cpp" />
