--- a/KPEngine_Test/KPEngine_Test.vcxproj.filters
+++ b/KPEngine_Test/KPEngine_Test.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="DynamicHeapManager_UnitTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BitArray_UnitTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="Externals\HeapManager-Debug-x64.lib" />
