--- a/KPEngine/KPEngine.vcxproj.filters
+++ b/KPEngine/KPEngine.vcxproj.filters
@@ -45,13 +45,13 @@
     <ClCompile Include="src\Core\HeapManager\KPDynamicHeapAllocators.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\HeapManager\KPFixedHeapAllocators.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Core\HeapManager\KPFixedHeapManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\HeapManager\BitArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\HeapManager\KPMixedHeapAllocators.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -98,13 +98,13 @@
     <ClInclude Include="include\Core\HeapManager\KPDynamicHeapAllocators.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\HeapManager\KPFixedHeapAllocators.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\Core\HeapManager\KPFixedHeapManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Core\HeapManager\BitArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Core\HeapManager\KPMixedHeapAllocators.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
